# django-xtdb

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
django_xtdb/: base.py  compiler.py  patch.py
